Añadido build al .gitignore

--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "description": "1. Introduction\r 2. Install Tools\r 3. Create TypeScript React App By Vite\r 4. Create Git Repository\r    1. add README.md\r    2. create github account\r    3. connect vs code to github\r    4. publish repository\r 5. list products",
   "main": "index.js",
   "scripts": {
-    "build": "cd backend && npm install && npm run build  && cd ../frontend && npm install && npm run build",
-    "start": "TG_ALLOW_MIXED=ALLOW  node backend/build/index.js",
+    "build": "cd backend && npm install && npm run build && cd ../frontend && npm install && tsc -p tsconfig.app.json && vite build",
+    "start": "cross-env TG_ALLOW_MIXED=ALLOW node backend/build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gershwing/levels.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gershwing/levels/issues"
+  },
+  "homepage": "https://github.com/gershwing/levels#readme",
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
