--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd backend && npm install && npm run build && cd ../frontend && npm install && npx vite build",
-    "start": "cross-env NODE_ENV=production TG_ALLOW_MIXED=ALLOW node backend/build/index.js",
+    "start": "npx cross-env NODE_ENV=production TG_ALLOW_MIXED=ALLOW node backend/build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
